
———————————————————————————————————————————————————

§nVersion 0.4.0§r

Mods Added:
  — Better Invisibility
  — CraftTweaker Utils
  — Morechids
  — MPUtils
  — MPUtils Basic Tools
  — Scavenge
  — Worse Barrels

Mods Removed:
  — Enchantment Descriptions

Mods Updated:
  — Better Advancements
  — BnBGamingLib
  — Bookshelf
  — Botania Tweaks
  — Carry On
  — Charset Lib
  — Client Tweaks
  — CodeChickenLib
  — CraftTweaker
  — Fairy Lights
  — FastWorkbench
  — FoamFix
  — Forgiving Void
  — JEI
  — KleeSlabs
  — LootTweaker
  — ModTweaker
  — Pretty Beaches
  — Quark
  — SmoothFont
  — Toast Control
  — Tomb Many Graves 2
  — Trample Stopper
  — Traverse
  — Triumph
  — WAWLA
  — Waystones
  — Worley's Caves

Major Enhancements:
  — Added the Orechid Petram, to generate decorative stones, and the Orechid Terram, to generate grasses and dirts.
  — Rebalanced all waystones recipes around Botania progression
  — Blaze rods can now be farmed, inefficiently, with a livingwood avatar holding a Rod of the Unstable Reservoir. Advancement refactored to match.
  — Most hostile mobs now drop xp on death, regardless of kill method
  — The Wither drops a LOT more xp on death, and nether stars can be converted into bottles o' enchanting
  — A Wither farm powering a rosa arcana is now mana positive 
  — A Life Imbuer can now sustain itself via produced XP drops
  
Minor Tweaks:
  — Added Welcome screen to the pack, and in game changelog
  — Added taglines to Lexicon entries
  — Added gravel -> sand anvil smashing recipe
  — Added recipes to (inefficiently) recycle damaged leather armor and saddles back into leather
  — Removed some microcrafting in Earthworks
  — Disallow breaking generated waystones
  — Rearranged the Main Menu as a first step towards making a final one

Bugfixes:
  — Quark note block interface now requires an empty hand, because otherwise it breaks AFK fishing setups

———————————————————————————————————————————————————

§nTips, Tricks, and Tweaks§r

General: